force-app/main/default/objects/Mandatory_extras__c/Mandatory_extras__c.object-meta.xml
<CustomObject>
    <label>Mandatory extras</label>
    <nameField>
        <label>Mandatory extras Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mandatory extras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>