force-app/main/default/objects/Mandatory_extras__c/fields/Extra__c.field-meta.xml
<CustomField>
    <fullName>Extra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extra</label>
    <referenceTo>Extra__c</referenceTo>
    <relationshipLabel>Mandatory extras</relationshipLabel>
    <relationshipName>Mandatory_extras</relationshipName>
    <type>Lookup</type>
</CustomField>