force-app/main/default/objects/Mandatory_extras__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Mandatory extras</relationshipLabel>
    <relationshipName>Mandatory_extras</relationshipName>
    <type>Lookup</type>
</CustomField>