force-app/main/default/objects/Mandatory_extras__c/fields/ProductMandatory__c.field-meta.xml
<CustomField>
    <fullName>ProductMandatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Mandatory</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Mandatory extras (Product Mandatory)</relationshipLabel>
    <relationshipName>Mandatory_extras1</relationshipName>
    <type>Lookup</type>
</CustomField>