force-app/main/default/objects/Mandatory_extras__c/fields/ProductMaster__c.field-meta.xml
<CustomField>
    <fullName>ProductMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Master</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Mandatory extras (Product Master)</relationshipLabel>
    <relationshipName>Mandatory_extras2</relationshipName>
    <type>Lookup</type>
</CustomField>